--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 *{box-sizing:border-box}
 html,body{margin:0;padding:0;font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji"; color:var(--text); background:var(--bg);}
-img{max-width:100%;display:block}
+img{max-width:;display:block}
 a{color:inherit;text-decoration:none}
 a:hover{text-decoration:none}
 .container{max-width:1200px;margin:0 auto;padding:18px}
